alternative build/ini for java9/java10